# ais-uchet

./: .env.example  .gitignore  main.py  pyproject.toml
src/: main.py
src/core/: config.py  logger.py  security.py
src/database/: connection.py  migrations.py
src/models/: base.py  user.py
src/ui/: main_window.py
src/ui/dialogs/: login_dialog.py
src/ui/widgets/: ribbon_widget.py
